--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "mapbox-gl": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
