--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.12.9"
+    "leaflet": "^1.7.1",
+    "mongoose": "^5.12.9",
+    "react-chartjs-2": "^3.0.3"
   }
 }
