--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-leaflet": "^3.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "react-window": "^1.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
