--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^3.3.0",
     "mapbox-gl": "^2.2.0",
     "numeral": "^2.0.6",
