--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mapbox-gl": "^2.2.0",
     "numeral": "^2.0.6",
     "react": "^17.0.1",
