--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.7.1",
     "mongoose": "^5.12.9",
     "react-chartjs-2": "^3.0.3"
