--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,4 @@
-{
+{"homepage": "http://sanelulu.github.io/Covid-Clean",
   "name": "mern",
   "version": "0.1.0",
   "private": true,
@@ -32,5 +32,8 @@
     ">0.2%",
     "not dead",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^3.2.0"
+  }
 }
