--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://sanelulu.github.io/Covid-Clean",
   "name": "mern",
   "version": "1.0.0",
   "description": "Mern Demo",
@@ -11,12 +12,15 @@
     "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d  build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.2",
+    "gh-pages": "^3.2.0",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
