--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d  build"
+    "heroku-postbuild": "npm run build"
+    
   },
   "author": "",
   "license": "ISC",
