--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
-    
   },
   "author": "",
   "license": "ISC",
@@ -24,13 +23,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.7.1",
     "mongoose": "^5.12.9",
     "react-chartjs-2": "^3.0.3"
-  }, 
+  },
   "engines": {
     "node": "14.15.4"
   }
