--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run seed && npm run install && npm run build"
   },
   "author": "",
   "license": "ISC",
