--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://Sanelulu:sane001@cluster0.gabcm.mongodb.net/covid?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://Sanelulu:<password>@cluster0.gabcm.mongodb.net/covid?retryWrites=true&w=majority
 NODE_ENV=production
 PORT=3001
